[package]
name = "geolog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
pretty_env_logger = "0.5"
log = "0.4"
geozero = "0.10"
thiserror = "1.0"
base64 = "0.21"
# Only needed for
# https://docs.rs/serde_qs/0.12.0/serde_qs/index.html#flatten-workaround
serde_with = "3"

[dependencies.time]
version = "0.3.2"
features = ["serde"]

[dependencies.sqlx]
version = "0.7"
features = ["postgres", "time", "runtime-tokio"]

[dependencies.serde]
version = "1"
features = ["derive"]